Changes

from version 1.00 to 1.01

bugfixes:
- none yet