@@ -20,8 +20,9 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="1"/>
+      <RevisionNr Value="1"/>
       <Attributes pvaPreRelease="True"/>
-      <StringTable CompanyName="Jobst Technologies" FileDescription="Program to read out sensor values from the SIX device" LegalCopyright="Jobst Technologies GmbH" ProductName="JT SIX Readout" ProductVersion="1.00"/>
+      <StringTable CompanyName="Jobst Technologies" FileDescription="Program to read out sensor values from the SIX device" LegalCopyright="Jobst Technologies GmbH" ProductName="JT SIX Readout" ProductVersion="1.01"/>
     </VersionInfo>
     <BuildModes Count="3">
       <Item1 Name="Default" Default="True"/>
@@ -126,12 +127,11 @@
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
-        <Filename Value="jtsixreadoutmain.pas"/>
+        <Filename Value="JTSIXReadoutMain.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="MainForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="JTSIXReadoutMain"/>
       </Unit1>
       <Unit2>
         <Filename Value="serialusbselection.pas"/>
